2004-03-01  Marcus Brinkmann  <marcus@g10code.de>

	* Makefile.am (ath_pth_src): Removed.
	(ath_pthread_src): Removed.
	(libgcrypt_la_SOURCES): Remove ath-compat, $(ath_pth_src) and
	$(ath_pthread_src).
	* ath-compat.c, ath-pth-compat.c, ath-pthread-compat.c: Files
	removed.
	
2004-02-20  Werner Koch  <wk@gnupg.org>

	* gcrypt.h (GCRY_PRIME_CHECK_AT_GOT_PRIME)
	(GCRY_PRIME_CHECK_AT_FINISH),
	(GCRY_PRIME_CHECK_AT_MAYBE_PRIME): New.

2004-02-18  Werner Koch  <wk@gnupg.org>

	* libgcrypt-config.in: Ignore setting of --prefix.

2004-02-13  Werner Koch  <wk@gnupg.org>

	* gcrypt.h: Added GCRY_CIPHER_RFC2268_128, alsthough not yet
	supported.

2004-02-06  Werner Koch  <wk@gnupg.org>

	* gcrypt.h: Added GCRY_CIPHER_RFC2268_40.

2004-02-03  Werner Koch  <wk@gnupg.org>

	* secmem.c (_gcry_secmem_init): Do not print the "not locked into
	core warning" if the NO_WARNING flag has been set.

	* sexp.c (sexp_sscan): Allocate result in secure memory if BUFFER
	is in secure memory. Switch to secure memory for the a secure %b
	format item. Extra paranoid wipe on error.
	(gcry_sexp_release): Added paranoid wiping for securely allocated
	S-expressions.

2004-01-25  Moritz Schulte  <mo@g10code.com>

	* ath.h: Include <config.h>.

2004-01-12  Moritz Schulte  <mo@g10code.com>

	* gcrypt.h: Adjusted declarations of: gcry_ac_data_set,
	gcry_ac_data_get_name, gcry_ac_data_get_index,
	gcry_ac_key_pair_generate, gcry_ac_key_test,
	gcry_ac_key_get_nbits, gcry_ac_key_get_grip.

	* gcrypt.h (GCRY_AC_FLAG_DATA_NO_BLINDING): Removed symbol.
	(GCRY_AC_FLAG_DEALLOC, GCRY_AC_FLAG_COPY) 
	(GCRY_AC_FLAG_NO_BLINDING): New symbols.

	* global.c (gcry_strdup): Removed function.
	* string.c: New file.
	* Makefile.am (libgcrypt_real_la_SOURCES): Added: string.c.
	* string.c (gcry_strdup): New function.
	* gcrypt.h (gcry_strdup): Declare.

2003-12-19  Werner Koch  <wk@gnupg.org>

	* g10lib.h (wipememory, wipememory2): New; taken from gnupg.

2003-11-14  Werner Koch  <wk@gnupg.org>
